--- a/_config.yml
+++ b/_config.yml
@@ -218,7 +218,9 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
+  math_engine: mathjax
 
+mathjax: true # load MathJax script for local preview too
 
 # Sass/SCSS
 sass:
