--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,11 @@
 # main links
 main:
+  - title: "Home"
+    url: https://shu-ting-yang.github.io/cg-learning-journal/
   - title: "Github"
     url: https://github.com/shu-ting-yang/cg-learning-journal
+  - title: "Learning Journal"
+    url: /learning-log/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
