--- a/_config.yml
+++ b/_config.yml
@@ -326,3 +326,7 @@ defaults:
       comments: # true
       share: true
       related: true
+
+# Custom head includes (to add your JS)
+head_scripts:
+  - /assets/js/theme-toggle.js
