--- a/_config.yml
+++ b/_config.yml
@@ -114,10 +114,10 @@ analytics:
 # Site Author
 author:
   name             : "Shuting Yang"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/avatar.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I enjoy hiking."
   location         : "Cambridge, UK"
-  email            :
+  email            : "shuting.yang.art@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
