--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "shuting.yang.art@gmail.com"
+      url: "mailto:shuting.yang.art@gmail.com"
     - label: "LinkedIn"
       icon: "fas fa-fw fa-link"
       url: "https://www.linkedin.com/in/yang-shuting/"
