--- a/_config.yml
+++ b/_config.yml
@@ -219,6 +219,7 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
   math_engine: mathjax
+  syntax_highlighter: rouge
 
 mathjax: true # load MathJax script for local preview too
 
