--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cmake.sourceDirectory": "/Users/shutingyang/Documents/blog/my-cg-journal/projects/w1-view-transform"
+  "cmake.sourceDirectory": "/Users/shutingyang/Documents/Documents - Shuting's Second Brain/blog/my-cg-journal/projects/.template"
 }
