--- a/_config.yml
+++ b/_config.yml
@@ -17,17 +17,17 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Computer Graphics Learning Journal"
+title                    : "Shuting Yang | Psychology • Visual Storytelling • Creative Growth"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Shuting Yang"
-description              : "Just a blog"
+description              : "Psychology podcast notes, creative works, reading notes, and VFX learning archive."
 url                      : "https://shu-ting-yang.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/cg-learning-journal" # the subpath of your site, e.g. "/blog"
 repository               : "shu-ting-yang/cg-learning-journal" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : "Shuting Yang" # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
 enable_copy_code_button  : # true, false (default)
@@ -115,13 +115,10 @@ analytics:
 author:
   name             : "Shuting Yang"
   avatar           : "/assets/images/avatar.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I enjoy hiking."
+  bio              : "I explore psychology, visual storytelling, and creative growth through notes and projects."
   location         : "Cambridge, UK"
   email            : "shuting.yang.art@gmail.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:shuting.yang.art@gmail.com"
     - label: "LinkedIn"
       icon: "fas fa-fw fa-link"
       url: "https://www.linkedin.com/in/yang-shuting/"
@@ -230,8 +227,8 @@ sass:
 
 
 # Outputting
-permalink: /:categories/:title/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+permalink: /:collection/:title/
+timezone: Europe/London # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Pagination with jekyll-paginate
@@ -313,6 +310,14 @@ compress_html:
   ignore:
     envs: development
 
+collections:
+  podcast_notes:
+    output: true
+  creative_works:
+    output: true
+  reading_notes:
+    output: true
+
 
 # Defaults
 defaults:
@@ -322,8 +327,28 @@ defaults:
       type: posts
     values:
       layout: single
+      categories:
+        - vfx-learning
       author_profile: true
       read_time: true
       comments: # true
       share: true
       related: true
+  - scope:
+      path: ""
+      type: podcast_notes
+    values:
+      layout: single
+      author_profile: true
+  - scope:
+      path: ""
+      type: creative_works
+    values:
+      layout: single
+      author_profile: true
+  - scope:
+      path: ""
+      type: reading_notes
+    values:
+      layout: single
+      author_profile: true
