--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,3 @@
-# main links
 main:
   - title: "Home"
     url: /
@@ -8,7 +7,9 @@ main:
     url: /creative-works/
   - title: "Reading Notes"
     url: /reading-notes/
-  - title: "VFX Learning"
+  - title: "VFX Archive"
     url: /vfx-learning/
   - title: "About"
     url: /about/
+  - title: "Learning Log"
+    url: /learning-log/
